--- a/task/230808.md
+++ b/task/230808.md
@@ -43,16 +43,52 @@ let obj = {
     age: 24
 }
 
-console.log(obj);
-// {name: 'foo', age: 24}
+console.log(obj); // {name: 'foo', age: 24}
 ```
-2. 배열(Array):
-3. 함수(Function):
+2. 배열(Array): 리스트와 비슷한 객체
+```js
+// Array() 생성자 함수를 사용해서 새로운 배열 생성하기
+let arr = new Array();
+
+arr[0] = 'zero';
+arr[1] = 'one';
+arr[2] = 'two';
+
+console.log(arr); // (3) ['zero','one','two']
+```
+```js
+// 배열 리터럴 방식을 사용해서 새로운 배열 생성하기
+let arr = [];
+
+arr[0] = 'zero';
+arr[1] = 'one';
+arr[2] = 'two';
+
+console.log(arr); // (3) ['zero','one','two']
+```
+3. 함수(Function): 특정 작업을 수행하도록 설계된 코드 블록
+```js
+// 함수 선언하기
+function add(num1, num2) {
+    return num1 + num2;
+}
+
+console.log(add(3, 6)) // 9
+```
 4. 정규 표현식(Regular expressions
-):
+): 문자열에서 특정 문자 조합을 찾기 위한 패턴
+```js
+// RegExp 객체의 생성자 호출로 정규 표현식 만들기
+let re = new RegExp('ab + c');
+```
+```js
+// 정규 표현식 리터럴로 정규 표현식 만들기
+let re = /ab + c/;
+```
 
 ## let, var, const
 ### let
+- 
 ### var
 ### const
 
