--- a/task/230808.md
+++ b/task/230808.md
@@ -88,14 +88,147 @@ let re = /ab + c/;
 
 ## let, var, const
 ### let
-- 
+- 해당 블록 내에서만 사용이 가능하다
+```js
+let foo = 'Hello';
+
+if (true) {
+    let foo = 'Hello World';
+    console.log(foo); // Hello World
+}
+
+console.log(foo); // Hello
+```
+- 업데이트는 가능하지만 재선언은 불가능하다
+```js
+let foo = 'Hello';
+foo = 'Hello World';
+
+console.log(foo); // Hello World
+```
+```js
+let foo = 'Hello';
+let foo = 'Hello World';
+
+console.log(foo); // SyntaxError: Identifier 'foo' has already been declared
+```
+- 최상위로 호이스팅 되지만 초기화는 되지 않는다
+```js
+console.log(foo);
+let foo = 'Hello World'; // ReferenceError: Cannot access 'foo' before initialization
+```
 ### var
+- 전역 범위 혹은 함수 범위로 지정된다
+```js
+var foo = 'Hello';
+
+function myFunction() {
+    var a = 'Hello world';
+}
+
+console.log(a); // ReferenceError: a is not defined
+console.log(foo); // Hello
+```
+- 재선언과 업데이트 모두 가능하다
+```js
+var foo = 'Hello';
+var foo = 'Hello World';
+
+console.log(foo) // Hello World
+```
+```js
+var foo = 'Hello';
+foo = 'Hello World';
+
+console.log(foo) // Hello World
+```
+- 최상위로 호이스팅 되며 ```undefined```로 초기화된다
+```js
+console.log(foo);
+var foo = 'Hello World';
+// undefined
+```
 ### const
+- 해당 블록 내에서만 사용이 가능하다
+```js
+const foo = 'Hello';
+
+if (true) {
+    const foo = 'Hello World';
+    console.log(foo); // Hello World
+}
+
+console.log(foo); // Hello
+```
+- 업데이트와 재선언 모두 불가능하다(속성은 업데이트 가능)
+```js
+const foo = 'Hello';
+const foo = 'Hello World';
+
+console.log(foo) // SyntaxError: Identifier 'foo' has already been declared
+```
+```js
+const foo = 'Hello';
+foo = 'Hello World';
+
+console.log(foo) // TypeError: Assignment to constant variable.
+```
+```js
+const foo = {
+    name: 'foo'
+}
+
+foo.age = 24
+
+console.log(foo) // {name: 'foo', age: 24}
+```
+- 최상위로 호이스팅 되지만 초기화는 되지 않는다
+```js
+console.log(foo);
+const foo = 'Hello World'; // ReferenceError: Cannot access 'foo' before initialization
+```
 
 ## let vs var (스코프를 중심으로 차이점 알아보기)
+- let: 블록 범위
+- var: 전역 범위 또는 함수 범위
 
 ## 변수 호이스팅
-
+###### 인터프리터가 변수와 함수의 메모리 공간을 선언 전에 미리 할당하는 것을 의미한다
+- var
+```js
+console.log(foo);
+var foo = 'Hello World'; // undefined
+```
+- let
+```js
+console.log(foo);
+let foo = 'Hello World'; // ReferenceError: Cannot access 'foo' before initialization
+```
+- const
+```js
+console.log(foo);
+const foo = 'Hello World'; // ReferenceError: Cannot access 'foo' before initialization
+```
 ## 리터럴 (정규식 제외)
+- 객체(Object) 리터럴
+```js
+let obj = {
+    name: 'foo',
+    age: 24
+}
 
+console.log(obj); // {name: 'foo', age: 24}
+```
+- 배열(Array) 리터럴
+```js
+let arr = [];
+
+arr[0] = 'zero';
+arr[1] = 'one';
+arr[2] = 'two';
+
+console.log(arr); // (3) ['zero','one','two']
+```
 ## 식과 문
+- 식(Expression): 값으로 평가될 수 있다
+- 문(Statement): 프로그램을 구성하는 기분 단위이자 최소 실행 단위로 명령문이라고도 부른다
